# sandhi

./: .env  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1610a7833e6a_init.py
backend/app/: config.py  deps.py  main.py
backend/app/api/: router.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  user.py  workflow.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DATA_MODELS.md  EFFICIENCY.md  LEARNING_GUIDE.md  PRD.md  PROJECT_STRUCTURE.md
frontend/: index.html  package.json
frontend/src/: App.tsx
